[package]
name = "proxima"
description = "A lightweight HTTP server written in Rust"
version = "0.1.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.2", features = ["termination"] }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
